--- a/Shiny.qmd
+++ b/Shiny.qmd
@@ -56,3 +56,32 @@ Asean5<-read_csv("Data/Asean_5_IMF.csv")
 
 int
 ```
+
+```{r}
+library(tidyverse)
+weights<-read.csv("C:/Users/Cheeting/OneDrive/Documents/NM2207/Charlenentx.github.io/Data/percentage_goods_singstat.csv")
+
+
+library(plotly)
+
+colors <- c('rgb(211,94,96)', 'rgb(128,133,133)', 'rgb(144,103,167)', 'rgb(171,104,87)', 'rgb(114,147,203)')
+
+fig <- plot_ly(weights, labels = ~Goods, values = ~Weights, type = 'pie',
+        textposition = 'inside',
+        textinfo = 'percent',
+        insidetextfont = list(color = '#FFFFFF'),
+        hoverinfo = 'text',
+        text = ~paste(Goods, ":", Weights),
+        marker = list(colors = colors,
+                      line = list(color = '#FFFFFF', width = 1)),
+                     
+        showlegend = TRUE)
+fig <- fig %>% layout(title = 'CPI Weighing pattern 2022',
+         xaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE),
+         yaxis = list(showgrid = FALSE, zeroline = FALSE, showticklabels = FALSE))
+
+fig
+
+
+
+```
