--- a/Shiny.qmd
+++ b/Shiny.qmd
@@ -66,7 +66,7 @@ library(plotly)
 
 colors <- c('rgb(211,94,96)', 'rgb(128,133,133)', 'rgb(144,103,167)', 'rgb(171,104,87)', 'rgb(114,147,203)')
 
-fig <- plot_ly(weights, labels = ~Goods, values = ~Weights, type = 'pie',
+fig <- plot_ly(weights, labels = ~Goods, values = ~Weights, type = 'pie',2
         textposition = 'inside',
         textinfo = 'percent',
         insidetextfont = list(color = '#FFFFFF'),
